--- a/CDN/index.html
+++ b/CDN/index.html
@@ -97,6 +97,8 @@ crossorigin="anonymous"></script>
             mode:"Debug",
             publicKey: "XPPUBK-19995e83ba654840be35242359b66f8c-X",
             currency: document.getElementById("country").value,
+            productId:"1001",
+            productDescription:"test",
             callbackUrl: `${window.location.href}?transactionid=${transactionId}`,
             metadata: [
                 {
