--- a/CDN/index.html
+++ b/CDN/index.html
@@ -1,123 +1,127 @@
 <!DOCTYPE html>
 <html>
 <style>
-    body{
+  body {
     margin-top: 60px;
     width: 30%;
     left: 0;
     right: 0;
     margin-left: 500px;
-    }
-input[type=text], select {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
+  }
 
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
+  input[type=text],
+  select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
 
-input[type=submit]:hover {
-  background-color: #45a049;
-}
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
 
-div {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+
+  div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
 </style>
+
 <body>
 
-<h3>Merchant APP(PG Test)</h3>
+  <h3>Merchant APP(PG Test)</h3>
 
-<div>
-    <p style="text-align: center;"><span id="description"> </span> <span id="amount" style="font-weight: bold;"></span></p>
-  <form   method="POST">
-    <label for="fname">Email</label>
-    <input required type="text" id="email" name="firstname" placeholder="Your email..">
+  <div>
+    <p style="text-align: center;"><span id="description"> </span> <span id="amount" style="font-weight: bold;"></span>
+    </p>
+    <form method="POST">
+      <label for="fname">Email</label>
+      <input required type="text" id="email" name="firstname" placeholder="Your email..">
 
-    <label for="lname">Amount</label>
-    <input required type="text" id="amount" name="lastname" placeholder="Amount">
-    <label for="country">Currency</label>
-    <select required  id="country" name="country">
+      <label for="Amount">Amount</label>
+      <input required type="text" id="amount" name="amount" placeholder="Amount">
+      <label for="country">Currency</label>
+      <select required id="country" name="country">
         <option value="NGN">Naira</option>
         <option value="USD">Dollar</option>
         <option value="EURO">EURO</option>
         <option value="GHC">CEDIS</option>
-    </select>
-  
-    <input type="submit" value="Pay">
-  </form>
-</div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" 
-integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
-crossorigin="anonymous"></script>
-<!-- <script type="module" src="./index.js"></script> --->
-<script data-main="scripts/app" src="https://pgsandbox.xpresspayments.com:8020/xpressPay.min.js"></script> 
-<script>
-  $(document).ready(function(){
-    const params = new URLSearchParams(window.location.search);
-    const tranId = params.get('transactionid');
-    XpressPay.VerifyPayment({
+      </select>
+
+      <input id="pay" type="submit" value="Pay">
+    </form>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <!-- <script type="module" src="./index.js"></script> --->
+  <script data-main="scripts/app" src="https://pgsandbox.xpresspayments.com:8020/xpressPay.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      const params = new URLSearchParams(window.location.search);
+      const tranId = params.get('transactionid');
+      XpressPay.VerifyPayment({
         publicKey: "XPPUBK-19995e83ba654840be35242359b66f8c-X",
-        transactionId:  tranId ?? "",
+        transactionId: tranId ?? "",
         mode: "Debug",
       }).then((response) => {
-          console.log("object", response)
+        console.log("object", response)
         let amount = response?.data?.amount;
         if (amount) {
-            $("#amount").text("You have payed ")
+          $("#amount").text("You have payed ")
         } else {
-            $("#amount").text("")
+          $("#amount").text("")
         }
       });
-
-    $("form").submit(function(e){
-        e.preventDefault()
-        const email = document.getElementById("email").value;
-        const amount = document.getElementById("amount").value;
+      $("form").submit(function (e) {
+        e.preventDefault();
+        var email = $("#email").val(); 
+        var amount = $("#amount").val();
+        $("#pay").val("Paying.........."); 
         const transactionId = Math.floor(Math.random() * 99999999)
         XpressPay.InitialisePayment({
-            amount: amount + ".00",
-            transactionId: transactionId + "",
-            email: email,
-            mode:"Debug",
-            publicKey: "XPPUBK-19995e83ba654840be35242359b66f8c-X",
-            currency: document.getElementById("country").value,
-            productId:"1001",
-            productDescription:"test",
-            callbackUrl: `${window.location.href}?transactionid=${transactionId}`,
-            metadata: [
-                {
-                    name: "string",
-                    value: "string"
-                }
-            ]
-        }).then(response => { 
-            if(response.success){
-                window.location.href = response.data.authorizeUrl
-            }else{
-                window.location.href = response.data.authorizeUrl
+          amount: amount + ".00",
+          transactionId: transactionId + "",
+          email: email,
+          mode: "Debug",
+          publicKey: "XPPUBK-19995e83ba654840be35242359b66f8c-X",
+          currency: document.getElementById("country").value,
+          productId: "1001",
+          productDescription: "test",
+          callbackUrl: `${window.location.href}?transactionid=${transactionId}`,
+          metadata: [
+            {
+              name: "string",
+              value: "string"
             }
-            
+          ]
+        }).then(response => {
+          if (response.success) {
+            window.location.href = response.data.authorizeUrl
+          } else {
+            window.location.href = response.data.authorizeUrl
+          }
+
         });
-});
-   
-});
-</script>
+      });
+
+    });
+  </script>
 
 </body>
+
 </html>
