--- a/CDN/index.html
+++ b/CDN/index.html
@@ -70,6 +70,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <!-- <script type="module" src="./index.js"></script> --->
+  <!--For Production Use the commented script -->
+<!-- <script data-main="scripts/app" src="https://myxpresspay.com:6002/xpressPay.min.js"></script>  -->
   <script data-main="scripts/app" src="https://pgsandbox.xpresspayments.com:8020/xpressPay.min.js"></script>
   <script>
     $(document).ready(function () {
